# VisualSuffixTree

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  VisualSuffixTree  cmake_install.cmake  config.txt  headerSvg.txt  main.cpp  todo  todo.md
Example/: input_example.txt
Include/: BitDecoder.h  BitEncode.h  BitIo.h  ConfigParser.h  Header.h  NodeInfo.h  NodeInfoStructure.h  ObjNode.h  SvgCreator.h  SvgUtils.h  TreeParser.h  Utils.h  objNode.h
Include/SvgObject/: StatusBar.h
Output/Svg_Output/: svg_input_example_1.html
Settings/: README.md  config.cfg  data_config.txt  svg_config.txt
doc/: configuration  usage
example/: input_example.txt
example/repetitive/: p-0128.txt
example/test/: F-whale-mt.txt  blue-whale-mt.txt  proteins-non-repetitive_10K_sample.txt  proteins-non-repetitive_1M_sample.txt  proteins-repetitive_1000K_sample.txt  proteins-repetitive_100K_sample.txt  proteins-repetitive_500K_sample.txt
example/toyStrings/: banana.txt  pattern1.txt  string0.txt  string1.txt  string1024.txt  string128.txt  string2.txt  string4.txt
src/: BitDecoder.cpp  BitEncode.cpp  BitIo.h  ConfigParser.cpp  ConfigParser.h  Header.cpp  Header.h  Logger.cpp  NodeInfo.cpp  NodeInfo.h  NodeInfoStructure.cpp  NodeInfoStructure.h  ObjNode.cpp  ObjNode.h  SvgCreator.cpp  SvgCreator.h  SvgUtils.h  TreeParser.cpp  TreeParser.h  Utils.cpp  Utils.h  Utils.hpp  example.cpp  main.cpp  main.h  objNode.cpp  parser.cpp  svg_plotter.cpp  tree_parser.cpp
src/SvgObject/: StatusBar.cpp
src/logger/: Logger.cpp  Logger.h
src/node/: Node.cpp  Node.h  Node_2.cpp  Node_2.h
src/nodeMap/: NodesMap.cpp  NodesMap.h
src/utils/: Utils.cpp  Utils.hpp
